* Fixed player entities not being saved if they were the only entity type in a
  scene.
* Fixed bug preventing new players from being added if no players were
  already loaded.
* Minor changes to the UI:
    * Added an icon to the camera view visualization.
    * Removed the chunk loading indicator icon.
    * Removed the player Y position indicator.
* Added -list-scenes command.
* End rods now emit light.
* Made it possible to manually set the Chunky settings directory via system
  properties (java -Dchunky.home=DIR).
* Omni-Directional Stereo projector added (thanks leMaik!)

1.3.8 - 2016-04-03

* Fixed water being rendered on sign blocks below the water height in water
  world mode.
* The scene/world directory selection dialogs now indicate if a valid
  directory is selected.
* Added button to scale canvas width/height by a factor of 1.5.
* Replaced the preview window scaling buttons with a drop-down list.
* Added Entities tab in the Render Controls dialog, allowing posing and
  skinning of player entities.
* Fixed chunk loading error that caused Chunky to hang while loading chunks
  if a font texture was missing.
* Launcher v1.8.12: the launcher now always tries to launch the embedded
  version.

1.3.7 - 2015-10-17

* Launcher v1.8.11: added --console option to show the GUI console even in
  headless mode.
* Added player entity rendering.
* Added option to disable player loading in the General tab in the
  Render Controls window.
* Fixed potential crash when rendering fire.
* Fixed potential crash when loading custom resource pack while the default
  resource pack could not be found.
* Store the current world dimension and re-open the current world in the same
  dimension next time Chunky starts.

1.3.6 - 2015-10-04

* Fire textures are now loaded from resource pack.
* New scenes have emitters turned off by default.
* Cloud offset is now fixed relative to world origin.
* Added chunk count column in scene selector table.