@@ -21,5 +21,5 @@ import se.llbit.chunky.main.Chunky;
 import se.llbit.chunky.main.ChunkyOptions;
 
 public interface RenderContextFactory {
-  RenderContext newRenderContext(Chunky chunky, ChunkyOptions options);
+  RenderContext newRenderContext(Chunky chunky);
 }
